--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+.w3-crimson,.w3-hover-crimson:hover{color:#fff!important;background-color:#cc0000!important}
+.w3-text-crimson,.w3-hover-text-crimson:hover{color:#cc0000!important}
+.w3-border-crimson,.w3-hover-border-crimson:hover{border-color:#cc0000!important}
 </style>
 </head><body class="w3-light-grey" data-gr-c-s-loaded="true">
 
