--- a/index.html
+++ b/index.html
@@ -31,51 +31,51 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Software Engineer</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Lucknow, India</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>milind7@live.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+91 9621131311</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-crimson"></i>Software Engineer</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-crimson"></i>Lucknow, India</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-crimson"></i>milind7@live.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-crimson"></i>+91 9621131311</p>
           <hr>
 
-          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
+          <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-crimson"></i>Skills</b></p>
           <p>PHP</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
-            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:90%">
+            <div class="w3-progressbar w3-round-xlarge w3-crimson" style="width:90%">
               <div class="w3-center w3-text-white">90%</div>
             </div>
           </div>
           <p>Python</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
-            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:80%">
+            <div class="w3-progressbar w3-round-xlarge w3-crimson" style="width:80%">
               <div class="w3-center w3-text-white">80%</div>
             </div>
           </div>
           <p>Magento 1/2</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
-            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:75%">
+            <div class="w3-progressbar w3-round-xlarge w3-crimson" style="width:75%">
               <div class="w3-center w3-text-white">75%</div>
             </div>
           </div>
           <p>Odoo</p>
           <div class="w3-progress-container w3-round-xlarge w3-small">
-            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:50%">
+            <div class="w3-progressbar w3-round-xlarge w3-crimson" style="width:50%">
               <div class="w3-center w3-text-white">50%</div>
             </div>
           </div>
           <br>
 
-          <!-- <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
+          <!-- <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-crimson"></i>Languages</b></p>
           <p>English</p>
           <div class="w3-progress-container w3-round-xlarge">
-            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:100%"></div>
+            <div class="w3-progressbar w3-round-xlarge w3-crimson" style="width:100%"></div>
           </div>
           <p>Spanish</p>
           <div class="w3-progress-container w3-round-xlarge">
-            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:55%"></div>
+            <div class="w3-progressbar w3-round-xlarge w3-crimson" style="width:55%"></div>
           </div>
           <p>German</p>
           <div class="w3-progress-container w3-round-xlarge">
-            <div class="w3-progressbar w3-round-xlarge w3-teal" style="width:25%"></div>
+            <div class="w3-progressbar w3-round-xlarge w3-crimson" style="width:25%"></div>
           </div>
           <br> -->
         </div>
@@ -88,10 +88,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-twothird">
     
       <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-crimson"></i>Work Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Web Developer</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2016 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-crimson"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2016 - <span class="w3-tag w3-crimson w3-round">Current</span></h6>
           <p>
           	Magento 1-2 / Odoo Developer
           </p>
@@ -99,17 +99,17 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Internship </b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2015 - Aug 2015</h6>
+          <h6 class="w3-text-crimson"><i class="fa fa-calendar fa-fw w3-margin-right"></i>June 2015 - Aug 2015</h6>
           <p>Automation Selenium Tester</p>
           <hr>
         </div>
       </div>
 
       <div class="w3-container w3-card-2 w3-white">
-        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-crimson"></i>Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Computer Science Engineering</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - 2016</h6>
+          <h6 class="w3-text-crimson"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - 2016</h6>
           <p>Bachelor's Degree</p><br>
         </div>
       </div>
@@ -123,7 +123,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <!-- End Page Container -->
 </div>
 
-<footer class="w3-container w3-teal w3-center w3-margin-top">
+<footer class="w3-container w3-crimson w3-center w3-margin-top">
   <p>Find me on social media.</p>
   <a href="http://www.facebook.com/imilindsingh"><h4 class="fa fa-facebook-official w3-hover-text-indigo w3-large"></h4></a>
   <a href="http://www.github.com/milindsingh"><h4 class="fa fa-github-square w3-hover-text-purple w3-large"></h4></a>
