--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-        <p><a href="https://www.facebook.com/imilindsingh"><i class="fa fa-facebook-official w3-hover-text-indigo w3-xxxlarge w3-text-crimson"></i></a>
-  <a href="https://www.github.com/milindsingh"><i class="fa fa-github-square w3-hover-text-purple w3-xxxlarge w3-text-crimson"></i></a>
-  <a href="https://twitter.com/milindxlf2"><i class="fa fa-twitter w3-hover-text-light-blue w3-xxxlarge w3-text-crimson"></i></a>
-  <a href="https://www.linkedin.com/in/imilindsingh"><i class="fa fa-linkedin w3-hover-text-indigo w3-xxxlarge w3-text-crimson"></i></a>
-  <hr>
-  </p>
+        <p class="w3-row">
+        <a href="https://www.github.com/milindsingh" class="w3-col s3"><i class="fa fa-github-square w3-hover-text-purple w3-xxxlarge w3-text-crimson"></i></a>
+        <a href="https://www.linkedin.com/in/imilindsingh" class="w3-col s3"><i class="fa fa-linkedin w3-hover-text-indigo w3-xxxlarge w3-text-crimson"></i></a>
+         <a href="https://www.facebook.com/imilindsingh" class="w3-col s3"><i class="fa fa-facebook-official w3-hover-text-indigo w3-xxxlarge w3-text-crimson"></i></a>
+         <a href="https://twitter.com/milindxlf2" class="w3-col s3" ><i class="fa fa-twitter w3-hover-text-light-blue w3-xxxlarge w3-text-crimson"></i></a>
+        
+       
+        <hr>
+        </p>
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-crimson"></i>Software Engineer</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-crimson"></i>Lucknow, India</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-crimson"></i>milind7@live.com</p>
@@ -71,7 +74,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 
         </div>
-      <br>
+      <br><br>
 
       <hr>
 
