--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   
     <!-- Left Column -->
     <div class="w3-third">
-        <div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="imilindsingh"><a class="LI-simple-link" href='https://in.linkedin.com/in/imilindsingh?trk=profile-badge'>Milind Singh</a></div>    <!-- End Left Column -->
+        <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="imilindsingh"><a class="LI-simple-link" href='https://in.linkedin.com/in/imilindsingh?trk=profile-badge'>Milind Singh</a></div>
     </div>
 
     <!-- Right Column -->
