--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 .w3-border-crimson,.w3-hover-border-crimson:hover{border-color:#cc0000!important}
 .m-top{margin-top:5px;}
 </style>
- <script>window.location.href = "https://adapttive.com/milind";<?script>
+<script>window.location.href = "https://adapttive.com/milind";</script>
 </head><body class="w3-light-grey" data-gr-c-s-loaded="true">
 
 <!-- Page Container -->
